# CuTTY

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  Makefile  README.md  bench.sh  notes.txt  publish.sh
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  upload_asset.sh
alacritty-master/: CHANGELOG.md  INSTALL.md  README.md
alacritty-master/alacritty/: Cargo.toml  build.rs
alacritty-master/alacritty/src/: event.rs  logging.rs  main.rs  window_context.rs
alacritty-master/alacritty/src/config/: debug.rs  font.rs
alacritty-master/alacritty/src/display/: cursor.rs  damage.rs  meter.rs  mod.rs  rects.rs  renderer.rs  text.rs  window.rs
alacritty-master/extra/linux/: Alacritty.desktop  org.alacritty.Alacritty.appdata.xml
alacritty-master/extra/man/: alacritty.1.scd  alacritty.5.scd
cutty/: Cargo.toml  LICENSE  README.md  build.rs
cutty/src/: app.rs  cli.rs  clipboard.rs  config.rs  event.rs  events.rs  input.rs  lib.rs  logging.rs  main.rs  message_bar.rs  panic.rs  parser.rs  pty.rs  renderer.rs  selection.rs  terminal.rs  text.rs  window_context.rs
cutty/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
cutty/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  rects.rs  renderer.rs  text.rs  window.rs
cutty/src/input/: keyboard.rs  mod.rs
cutty/src/macos/: locale.rs  proc.rs
cutty/src/polling/: ipc.rs  mod.rs
cutty/src/terminal/grid/: index.rs  mod.rs  row.rs  storage.rs  tests.rs
cutty/windows/: cutty.rc
cutty/windows/wix/: cutty.wxs  license.rtf
cutty_config/: Cargo.toml
cutty_config/src/: lib.rs
cutty_config_derive/: Cargo.toml
cutty_config_derive/src/: lib.rs  serde_replace.rs
cutty_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
cutty_config_derive/tests/: config.rs
cutty_terminal/: CHANGELOG.md  Cargo.toml
cutty_terminal/src/: event_loop.rs  lib.rs
cutty_terminal/src/grid/: resize.rs
cutty_terminal/src/term/: cell.rs  mod.rs  search.rs
cutty_terminal/src/tty/: mod.rs  unix.rs
cutty_terminal/src/tty/windows/: blocking.rs  conpty.rs  mod.rs
cutty_terminal/tests/: ref.rs  ref_regen.rs
cutty_terminal/tests/ref/alt_reset/: cutty.recording  grid.json
cutty_terminal/tests/ref/clear_underline/: cutty.recording  grid.json
cutty_terminal/tests/ref/colored_underline/: cutty.recording
cutty_terminal/tests/ref/csi_rep/: cutty.recording  grid.json
cutty_terminal/tests/ref/decaln_reset/: cutty.recording  grid.json
cutty_terminal/tests/ref/deccolm_reset/: cutty.recording  grid.json
cutty_terminal/tests/ref/delete_chars_reset/: cutty.recording  grid.json
cutty_terminal/tests/ref/delete_lines/: cutty.recording  grid.json
cutty_terminal/tests/ref/erase_chars_reset/: cutty.recording  grid.json
cutty_terminal/tests/ref/fish_cc/: cutty.recording  grid.json
cutty_terminal/tests/ref/hyperlinks/: cutty.recording  grid.json
cutty_terminal/tests/ref/indexed_256_colors/: cutty.recording  grid.json
cutty_terminal/tests/ref/insert_blank_reset/: cutty.recording  grid.json
cutty_terminal/tests/ref/issue_855/: cutty.recording  grid.json
cutty_terminal/tests/ref/ll/: cutty.recording  grid.json
cutty_terminal/tests/ref/newline_with_cursor_beyond_scroll_region/: cutty.recording
cutty_terminal/tests/ref/origin_goto/: cutty.recording  grid.json
cutty_terminal/tests/ref/region_scroll_down/: cutty.recording  grid.json
cutty_terminal/tests/ref/scroll_in_region_up_preserves_history/: cutty.recording  grid.json
cutty_terminal/tests/ref/scroll_up_reset/: cutty.recording  grid.json
cutty_terminal/tests/ref/tmux_git_log/: cutty.recording  grid.json
cutty_terminal/tests/ref/tmux_htop/: cutty.recording  grid.json
cutty_terminal/tests/ref/vim_24bitcolors_bce/: cutty.recording
cutty_terminal/tests/ref/vim_large_window_scroll/: cutty.recording
cutty_terminal/tests/ref/vim_simple_edit/: cutty.recording
cutty_terminal/tests/ref/vttest_cursor_movement_1/: cutty.recording
cutty_terminal/tests/ref/vttest_insert/: cutty.recording
cutty_terminal/tests/ref/vttest_origin_mode_1/: cutty.recording
cutty_terminal/tests/ref/vttest_origin_mode_2/: cutty.recording
cutty_terminal/tests/ref/vttest_scroll/: cutty.recording
cutty_terminal/tests/ref/zsh_tab_completion/: cutty.recording  grid.json
docs/: features.md  parley-term-extraction.md
extra/: alacritty.benchmark.toml  cutty.daily.toml  cutty.example.toml  cutty.info
extra/completions/: _cutty  cutty.bash  cutty.fish
extra/linux/: CuTTY.desktop  org.cutty.CuTTY.appdata.xml
extra/man/: cutty-bindings.5.scd  cutty-escapes.7.scd  cutty-msg.1.scd  cutty.1.scd  cutty.5.scd
extra/osx/CuTTY.app/Contents/: Info.plist
extra/osx/CuTTY.app/Contents/Resources/: cutty.icns
parley_term/: Cargo.toml
parley_term/src/: color.rs  font.rs  grid.rs  lib.rs  rects.rs  renderer.rs  scene.rs  text.rs
scripts/: README.md  benchmark_child.sh  benchmark_common.sh  benchmark_report.py  compare-vtebench-macos.sh  create-flamegraph.sh  regenerate-icons.sh  run-kitten-benchmark.sh
