[package]
name = "cutty"
version = "0.1.0"
edition = "2024"
description = "A library-first terminal crate for CuTTY, with a desktop terminal binary."
license = "MIT"
readme = "README.md"
repository = "https://github.com/gold-silver-copper/CuTTY"
homepage = "https://github.com/gold-silver-copper/CuTTY"
keywords = ["terminal", "ansi", "wgpu", "emulator"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cutty"
path = "src/bin/cutty.rs"

[dependencies]
arboard = "3.6"
anyhow = "1.0"
directories = "6.0"
parley = { version = "0.7.0", path = "../parley-main/parley" }
pollster = "0.4"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.12"
unicode-width = "0.2"
vello = { version = "0.7.0", path = "../vello-main/vello" }
vte = { version = "0.15", features = ["ansi"] }
winit = "0.30.12"
