[package]
name = "cutty_config"
version = "0.3.3"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "MIT OR Apache-2.0"
description = "CuTTY configuration abstractions"
homepage = "https://github.com/gold-silver-copper/CuTTY"
repository = "https://github.com/gold-silver-copper/CuTTY"
documentation = "https://docs.rs/cutty_config"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.163"
toml.workspace = true
