[package]
name = "cutty_config_derive"
version = "0.3.0"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "MIT OR Apache-2.0"
description = "Failure resistant deserialization derive"
homepage = "https://github.com/gold-silver-copper/CuTTY"
repository = "https://github.com/gold-silver-copper/CuTTY"
documentation = "https://docs.rs/cutty_config_derive"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "2.0.16", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }

[dev-dependencies.cutty_config]
path = "../cutty_config"
version = "0.3.0"

[dev-dependencies]
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
toml.workspace = true
